# OlapMod

./: .gitignore  README.md
.github/workflows/: main.yml
algoCpp/: CMakeLists.txt  README.md
algoCpp/doc/: aide.html
algoCpp/resources/: fichier_dix_milles.csv  table_fait_string.csv  table_fait_string_1000.csv  table_fait_string_grandformat.csv  table_fait_string_test copy.csv
algoCpp/source/: nbEnregistrements.cpp
algoCpp/source/main/include/: calculBenefice.hpp  mainwindow.hpp  nbEnregistrements.hpp
algoCpp/source/main/source/: calculBenefice.cpp  main.cpp  mainwindow.cpp  nbEnregistrements.cpp  qt_main.cpp
algoCpp/source/test/include/: unit_test.hpp
algoCpp/source/test/source/: main.cpp  nbEnregistrements.cpp  unit_test.cpp
